# matrix-calculator

./: .dockerignore  CMakeLists.txt  Dockerfile  Doxyfile
.github/workflows/: ci.yml
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  matrix_8cpp.html  matrix_8cpp.js  matrix_8h.html  matrix_8h.js  matrix_8h_source.html  navtreeindex0.js  struct_matrix-members.html  struct_matrix.html  struct_matrix.js  test_8cpp.html  test_8cpp.js
docs/html/search/: all_0.js  all_3.js  all_6.js  functions_2.js  functions_4.js
src/: main.cpp  matrix.cpp  matrix.h  test.cpp
